feat: Add Google signIn and validators

--- a/frontend/store-front/src/index.css
+++ b/frontend/store-front/src/index.css
@@ -16,3 +16,10 @@ code {
   color: red;
   font-size: small;
 }
+
+.signUp-login {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  margin-top: 15%;
+}
